licenses(["notice"])
package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "form-field",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/form-field",
  assets = [
    ":form-field.css",
    ":form-field-fill.css",
    ":form-field-legacy.css",
    ":form-field-outline.css",
    ":form-field-standard.css",
    ":input.css",
  ] + glob(["**/*.html"]),
  deps = [
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/observers",
    "//third_party/ts/material2/src/cdk/platform",
  ],
  tsconfig = "//third_party/ts/material2/src/lib:tsconfig-build.json",
)

# Notice:
#       This file is copied from `lib/input/input.scss`. Since build material2
#       component from the the project bazel build, the templateUrl could not
#       use relative path.
sass_binary(
  name = "input_scss",
  src = "input.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "form_field_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "form_field_scss",
  src = "form-field.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "form_field_fill_scss",
  src = "form-field-fill.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "form_field_legacy_scss",
  src = "form-field-legacy.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "form_field_outline_scss",
  src = "form-field-outline.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "form_field_standard_scss",
  src = "form-field-standard.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)
