package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "input",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/input",
  assets = glob(["**/*.html"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@rxjs",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/text-field",
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/form-field",
  ],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "input_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "input_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/forms",
    "@angular//packages/platform-browser",
    "@angular//packages/platform-browser/animations",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/testing",
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/form-field",
    "//third_party/ts/material2/src/lib/stepper",
    "//third_party/ts/material2/src/lib/tabs",
    ":input",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":input_test_sources"],
)
